module/core/derive_tools/tests/inc/add/compile_fails/string_field_manual.stderr
error[E0308]: mismatched types
  --> tests/inc/add/compile_fails/string_field_manual.rs
   |
   |             x: self.x + rhs.x, // will not compile with rhs: String. Could compile with &String or &str
   |                         ^^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
10 |             x: self.x + &rhs.x, // will not compile with rhs: String. Could compile with &String or &str
   |                         +

error[E0369]: cannot subtract `String` from `String`
 --> tests/inc/add/compile_fails/string_field_manual.rs
  |
  |             x: self.x - rhs.x,
  |                ------ ^ ----- String
  |                |
  |                String
  |
note: the foreign item type `String` doesn't implement `Sub`
 --> $RUST/alloc/src/string.rs
  |
  | pub struct String {
  | ^^^^^^^^^^^^^^^^^ not implement `Sub`
